finalized mobilen navbar layout. need to fix scroll/position:absolute issue of outer-frame on mobile. need to fix column gap on #navBarOpener

--- a/css/style.scss
+++ b/css/style.scss
@@ -748,8 +748,7 @@ a:active {
           position: absolute;
           top: 0;
           &:first-child {
-            z-index: 999;
-          }
+            z-index: 999;          }
         }
       }
     }
